# kaban

./: .gitignore  CMakeLists.txt  data.cppm  ftxui.cppm  gui.cppm  kaban.cpp  state.cpp  state.hpp  stl.cppm
cmake/: ExternalProjects.cmake  Modules.cmake
gui/: CMakeLists.txt  board.cppm  configuration.cppm  gui.cppm  helpers.cppm
scripts/: CMakeLists.txt  clang-format.sh
test/: CMakeLists.txt  helpers.cppm  main.cpp  ut.cppm
test/data/: parse_basics.cpp  parse_color.cpp  parse_group.cpp  parse_label.cpp  parse_project.cpp  parse_task.cpp  status.cpp
